react-client/src/pages/Login.css
.login-wrapper{
    height: 100vh;
    width: 100vw;
    display: flex;
    box-sizing: border-box;
    align-items: center;
    justify-content: center;
}


.login-panel{
    display: flex;
    flex-direction: column;
    align-items: center;
    box-sizing: border-box;
    padding: 30px;
    gap: 10px;
    height: fit-content;
    min-width:400px;
    max-width: 500px;
    background-color: var(--BG);
    border: var(--IkBorder);
    backdrop-filter: blur(2px); 
    -webkit-backdrop-filter: blur(2px);
    border-radius: 10px;
}

.logo-container{
    width: 100%;
    height:auto;
    display: flex;
    justify-content: center;
    padding: 20px 0px;
}

form{
    display: flex;
    flex-direction: column;
    gap: 10px;
    width: 100%;
}

#login-button{
    margin-top: 10px;
    background-color: white;
    border: var(--IkBorder);
    color: #000000;
    padding:  5px 10px;
    border-radius: 5px;
    cursor: pointer;
    transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease, box-shadow 0.3s ease;
    font-weight: 600;
}


#login-button:hover{
    background-color: transparent;
    border: var(--IkBorder);
    color: #f2f2f2;
}

#login-button:active {
    box-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
}

.login-error {
	color: #f87171;
	font-size: 13px;
	text-align: center;
	margin-top: 5px;
}

